# Alprogcasestudy

./: CMakeLists.txt  README.md  main.cpp  sensor_data_export_2025-05-25T19-32-29_652Z.json  sensor_data_export_2025-05-26T14-11-55_628Z.json  sensor_data_export_2025-05-28T14-13-45_109Z.json  sensor_data_export_2025-06-04T11-31-25_690Z.json  sensor_data_export_2025-06-04T11-53-53_883Z.json  sensor_data_export_2025-06-04T12-03-53_595Z.json
include/: anomalydetector.h  common.h  datahandler.h
src/: anomalydetector.cpp  client.cpp  datahandler.cpp  server.cpp
